# 2026_HumpShaped_Cooperation

./: .gitignore  LICENSE  README.md
equilibrium_analysis/: .gitignore  README.md  pyproject.toml  requirements.txt
equilibrium_analysis/scripts/: compute_critical_K_boundaries.py  compute_edge_fitness_step_limit.py
equilibrium_analysis/src/equilibrium/: __init__.py  grid.py  simulation.py  solver.py  storage.py
evolution_simulation/: .gitignore  README.md  pyproject.toml  requirements.txt
evolution_simulation/scripts/: run_evolution_sweep.py
evolution_simulation/src/evolution/: __init__.py  composition.py  engine.py  grid.py  interaction.py  io.py  mutation.py  params.py  production.py  runner.py  selection.py  statistics.py  strategies.py
