[project]
name = "equilibrium-analysis"
version = "1.0.0"
description = "Replicator-dynamics equilibrium analysis for the public goods game with Hump-shaped strategies"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "numba>=0.58.0",
    "scipy>=1.10.0",
    "h5py>=3.8.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
